<resources>
    <string name="app_name">Concreta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tracking">Tracking</string>
    <string name="menu_analytic">Analítica</string>
    <string name="menu_account">Cuenta</string>
    <string name="menu_support">Soporte</string>
    <string name="menu_logout">Salir</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenidos !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Ingreso fallido"</string>
    <string name="profile_picture">Foto de perfil</string>
    <string name="send_email">Enviar correo electrónico</string>
    <string name="pedidos">Pedidos</string>
    <string name="soporte">Contacta a Soporte</string>
    <string name="cliente">Servicio al Cliente</string>
</resources>