<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/tracking_icon"
            android:title="@string/menu_tracking" />
        <item
            android:id="@+id/nav_analytic"
            android:icon="@drawable/analytics_icon"
            android:title="@string/menu_analytic" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/account_icon"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/support_icon"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout" />
    </group>
</menu>